Improve action control interface Fix mesh UV mapping preview issue Automatically import bedrock entity textures as emissive Use Shift key in UV editor to snap vertices to grid

--- a/css/panels.css
+++ b/css/panels.css
@@ -1277,6 +1277,7 @@
 		width: 9px;
 		background-color:  white;
 		border: 1px solid black;
+		cursor: move;
 	}
 	.uv_mesh_vertex.selected {
 		background-color:  var(--color-accent);
